--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,8 @@ nav ul a{
 .text-shadow {
     text-shadow: 2px 2px 2px rgba(0,0,0,0.3);
 }
+
+.rha-container {
+    height: 500px;
+    width: auto;
+}
