--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,88 @@ nav ul a{
     }
     
 }
+
+.mt-5 {
+    margin-top: 1.8rem;
+}
+
+.ml-2 {
+    margin-left: 2rem;
+}
+ 
+textarea {
+    border-radius: 5px;
+    border-color: #9e9e9e;
+}
+
+#message_input {
+    height: 10rem;
+}
+
+.resize-off {
+    resize: none;
+}
+
+#the-count {
+    float: right;
+    padding: 0.1rem 0 0 0;
+    font-size: 0.875rem;
+    color: #9e9e9e;
+  }
+
+.mb-0 {
+    margin-bottom: 0;
+}
+
+.pl-2 {
+    padding-left: 3rem !important;
+}
+
+.pb-2 {
+    padding-bottom: 2rem !important;
+}
+
+.address-container {
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%
+}
+
+@media (min-width: 601px) {
+    .address-container {
+        width:70%
+    }
+}
+
+@media (min-width: 993px) {
+    .address-container {
+        width: 60%;
+    }
+}
+
+@media (max-width: 600px) {
+    #address-info {
+        padding-left: 0 !important;
+    }
+  }
+
+.text-align-center {
+    text-align: center;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.capitalize {
+    text-transform: capitalize;
+}
+
+.divider {
+    margin: 0 auto;
+    width: 90%;
+}
+
+label {
+    width: 80% !important;
+}
