--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,9 @@ ul:before {
     .s-d-none {
         display: none;
     }
+    #interactive-map {
+        margin-top: 2rem;
+    }
 }
 
 @media (min-width: 601px) {
@@ -177,3 +180,10 @@ ul:before {
         display: none;
     }
 }
+
+#interactive-map {
+    width: 100%;
+    height: 400px;
+
+}
+
